C2LC-400: Standardised toggle heights to fix alignment issues.

--- a/src/AudioFeedbackToggleSwitch.scss
+++ b/src/AudioFeedbackToggleSwitch.scss
@@ -2,7 +2,6 @@
 
 .AudioFeedbackToggleSwitch {
     background-color: #B9BEC6;
-    max-height: 2.6rem;
     width: 4.5rem;
 
     &:focus {
